// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Component > normal: snapshot tests > normal: should match snapshot with empty tabs 1`] = `
<div>
  <div
    class="_app_ce1e69"
  >
    <header
      class="_header_f4f7a7"
    >
      <div
        class="_brand_f4f7a7"
      >
        <svg
          class="_logo_f4f7a7"
          fill="none"
          height="28"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M7 8h10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 12v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <h1
          class="_title_f4f7a7"
        >
          Tab Maestro
        </h1>
      </div>
      <div
        class="_actions_f4f7a7"
      >
        <button
          class="_buttonPrimary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 21H5a2 2 0 01-2-2V5a2 2 0 012-2h11l5 5v11a2 2 0 01-2 2z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <polyline
              points="17,21 17,13 7,13 7,21"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M12 11v6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M9 14h6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Save Current
        </button>
        <button
          class="_buttonSecondary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="2"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          Save All
        </button>
      </div>
    </header>
    <main
      class="_main_ce1e69"
    >
      <div
        class="_container_3d390e"
      >
        <div
          class="_icon_3d390e"
        >
          <svg
            fill="none"
            height="64"
            viewBox="0 0 24 24"
            width="64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="1.5"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
            <path
              d="M2 7h20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
        <h2
          class="_title_3d390e"
        >
          No saved tabs
        </h2>
        <p
          class="_description_3d390e"
        >
          Click "Save Current" or "Save All" to save your tabs for later.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`App Component > normal: snapshot tests > normal: should match snapshot with loading state 1`] = `
<div>
  <div
    class="_app_ce1e69"
  >
    <header
      class="_header_f4f7a7"
    >
      <div
        class="_brand_f4f7a7"
      >
        <svg
          class="_logo_f4f7a7"
          fill="none"
          height="28"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M7 8h10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 12v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <h1
          class="_title_f4f7a7"
        >
          Tab Maestro
        </h1>
      </div>
      <div
        class="_actions_f4f7a7"
      >
        <button
          class="_buttonPrimary_f4f7a7"
          disabled=""
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 21H5a2 2 0 01-2-2V5a2 2 0 012-2h11l5 5v11a2 2 0 01-2 2z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <polyline
              points="17,21 17,13 7,13 7,21"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M12 11v6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M9 14h6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Save Current
        </button>
        <button
          class="_buttonSecondary_f4f7a7"
          disabled=""
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="2"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          Save All
        </button>
      </div>
    </header>
    <main
      class="_main_ce1e69"
    >
      <div
        class="_loading_03313f"
      >
        <div
          class="_spinner_03313f"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`App Component > normal: snapshot tests > normal: should match snapshot with tabs loaded 1`] = `
<div>
  <div
    class="_app_ce1e69"
  >
    <header
      class="_header_f4f7a7"
    >
      <div
        class="_brand_f4f7a7"
      >
        <svg
          class="_logo_f4f7a7"
          fill="none"
          height="28"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M7 8h10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 12v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <h1
          class="_title_f4f7a7"
        >
          Tab Maestro
        </h1>
        <span
          class="_badge_f4f7a7"
        >
          2
        </span>
      </div>
      <div
        class="_actions_f4f7a7"
      >
        <button
          class="_buttonPrimary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 21H5a2 2 0 01-2-2V5a2 2 0 012-2h11l5 5v11a2 2 0 01-2 2z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <polyline
              points="17,21 17,13 7,13 7,21"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M12 11v6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M9 14h6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Save Current
        </button>
        <button
          class="_buttonSecondary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="2"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          Save All
        </button>
        <button
          class="_buttonSecondary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <line
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
          Close All
        </button>
        <button
          class="_buttonDanger_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <polyline
              points="3,6 5,6 21,6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Clear All
        </button>
      </div>
    </header>
    <main
      class="_main_ce1e69"
    >
      <div
        class="_list_03313f"
      >
        <div
          class="_card_f10852"
        >
          <div
            class="_favicon_f10852"
          >
            <img
              alt=""
              src="https://example.com/favicon.ico"
            />
          </div>
          <div
            class="_content_f10852"
          >
            <h3
              class="_title_f10852"
            >
              Test Tab 1
            </h3>
            <p
              class="_url_f10852"
            >
              example.com
            </p>
          </div>
          <div
            class="_meta_f10852"
          >
            <span
              class="_time_f10852"
            >
              Just now
            </span>
            <div
              class="_actions_f10852"
            >
              <button
                class="_actionButton_f10852"
                title="Open tab"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <polyline
                    points="15,3 21,3 21,9"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <line
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    x1="10"
                    x2="21"
                    y1="14"
                    y2="3"
                  />
                </svg>
              </button>
              <button
                class="_actionButton_f10852 _deleteButton_f10852"
                title="Delete tab"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <polyline
                    points="3,6 5,6 21,6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="_card_f10852"
        >
          <div
            class="_favicon_f10852"
          >
            <img
              alt=""
              src="data:image/svg+xml,%0A%20%20%20%20%20%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%2371717a%22%20stroke-width%3D%222%22%3E%0A%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%2212%22%20cy%3D%2212%22%20r%3D%2210%22%2F%3E%0A%20%20%20%20%20%20%20%20%3Cline%20x1%3D%222%22%20y1%3D%2212%22%20x2%3D%2222%22%20y2%3D%2212%22%2F%3E%0A%20%20%20%20%20%20%20%20%3Cpath%20d%3D%22M12%202a15.3%2015.3%200%200%201%204%2010%2015.3%2015.3%200%200%201-4%2010%2015.3%2015.3%200%200%201-4-10%2015.3%2015.3%200%200%201%204-10z%22%2F%3E%0A%20%20%20%20%20%20%3C%2Fsvg%3E%0A%20%20%20%20"
            />
          </div>
          <div
            class="_content_f10852"
          >
            <h3
              class="_title_f10852"
            >
              Test Tab 2
            </h3>
            <p
              class="_url_f10852"
            >
              test.com
            </p>
          </div>
          <div
            class="_meta_f10852"
          >
            <span
              class="_time_f10852"
            >
              Just now
            </span>
            <div
              class="_actions_f10852"
            >
              <button
                class="_actionButton_f10852"
                title="Open tab"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <polyline
                    points="15,3 21,3 21,9"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <line
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    x1="10"
                    x2="21"
                    y1="14"
                    y2="3"
                  />
                </svg>
              </button>
              <button
                class="_actionButton_f10852 _deleteButton_f10852"
                title="Delete tab"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <polyline
                    points="3,6 5,6 21,6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`App Component > normal: snapshot tests > normal: should match snapshot with toast message 1`] = `
<div>
  <div
    class="_app_ce1e69"
  >
    <header
      class="_header_f4f7a7"
    >
      <div
        class="_brand_f4f7a7"
      >
        <svg
          class="_logo_f4f7a7"
          fill="none"
          height="28"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M7 8h10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 12v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <h1
          class="_title_f4f7a7"
        >
          Tab Maestro
        </h1>
      </div>
      <div
        class="_actions_f4f7a7"
      >
        <button
          class="_buttonPrimary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 21H5a2 2 0 01-2-2V5a2 2 0 012-2h11l5 5v11a2 2 0 01-2 2z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <polyline
              points="17,21 17,13 7,13 7,21"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M12 11v6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M9 14h6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Save Current
        </button>
        <button
          class="_buttonSecondary_f4f7a7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="2"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          Save All
        </button>
      </div>
    </header>
    <main
      class="_main_ce1e69"
    >
      <div
        class="_container_3d390e"
      >
        <div
          class="_icon_3d390e"
        >
          <svg
            fill="none"
            height="64"
            viewBox="0 0 24 24"
            width="64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              stroke="currentColor"
              stroke-width="1.5"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M8 21h8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
            <path
              d="M12 17v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
            <path
              d="M2 7h20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
        <h2
          class="_title_3d390e"
        >
          No saved tabs
        </h2>
        <p
          class="_description_3d390e"
        >
          Click "Save Current" or "Save All" to save your tabs for later.
        </p>
      </div>
    </main>
    <div
      class="_toast_d9f17e _success_d9f17e"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <polyline
          points="22,4 12,14.01 9,11.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span>
        Tab saved successfully
      </span>
    </div>
  </div>
</div>
`;

exports[`App Component > snapshot: server-side rendering > snapshot: should match snapshot on server-side render 1`] = `"<div class="_app_ce1e69"><header class="_header_f4f7a7"><div class="_brand_f4f7a7"><svg class="_logo_f4f7a7" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="2"></rect><path d="M7 8h10" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path><path d="M12 12v4" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path></svg><h1 class="_title_f4f7a7">Tab Maestro</h1></div><div class="_actions_f4f7a7"><button class="_buttonPrimary_f4f7a7"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M19 21H5a2 2 0 01-2-2V5a2 2 0 012-2h11l5 5v11a2 2 0 01-2 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><polyline points="17,21 17,13 7,13 7,21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></polyline><path d="M12 11v6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>Save Current</button><button class="_buttonSecondary_f4f7a7"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><rect x="2" y="3" width="20" height="14" rx="2" stroke="currentColor" stroke-width="2"></rect><path d="M8 21h8" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path><path d="M12 17v4" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path></svg>Save All</button></div></header><main class="_main_ce1e69"><div class="_container_3d390e"><div class="_icon_3d390e"><svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="3" width="20" height="14" rx="2" stroke="currentColor" stroke-width="1.5"></rect><path d="M8 21h8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path><path d="M12 17v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path><path d="M2 7h20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path></svg></div><h2 class="_title_3d390e">No saved tabs</h2><p class="_description_3d390e">Click &quot;Save Current&quot; or &quot;Save All&quot; to save your tabs for later.</p></div></main></div>"`;
